--- a/style.css
+++ b/style.css
@@ -28,3 +28,10 @@ a{
 }
 
 /* 通配选择器  *{}  */
+
+/* 交集选择器 表示同时满足h1 .blue 才会被选中 */ 
+h1.blue{
+      font-size: 50px;
+}
+
+/* 并集选择器 h1,p{} 表示只要含有h1，p，都会被选中 */
