--- a/style.css
+++ b/style.css
@@ -27,11 +27,70 @@ a{
     font-size: 100px;
 }
 
-/* 通配选择器  *{}  */
+/* 通配选择器 ：  *{}  */
 
-/* 交集选择器 表示同时满足h1 .blue 才会被选中 */ 
+/* 交集选择器 ： 表示同时满足h1 .blue 才会被选中 */ 
 h1.blue{
       font-size: 50px;
 }
 
-/* 并集选择器 h1,p{} 表示只要含有h1，p，都会被选中 */
+/* 并集选择器 ： h1,p{} 表示只要含有h1，p，都会被选中 */
+
+/* 子元素选择器  ： 父元素 > 子元素{}  ；（父元素屁股后面可以加#id或者.class，用来指定父元素）*/
+
+/* 后代元素选择器 ： 祖先 后代{} ； 祖先 > 父元素 > 子元素{} ， 这样子更精确 */
+
+/* 选择下一个兄弟 ： 前一个兄弟 + 下一个兄弟 {}   */
+
+/* 选择下边所有的兄弟 ： 兄 ~ 弟{} ， 兄之后的弟都会被选中 */
+
+/* 属性选择器 ： p[title]{} : 是p元素，且含有title元素，才会被选中 ； */
+/*              p[title=abc]{} : 是p元素，且title元素等于abc，才会被选中 */
+/*              p[title^=abc]{} : 是p元素，且title元素以abc开头，才会被选中 */
+/*              p[title$=abc]{} : 是p元素，且title元素以abc结尾，才会被选中 */
+/*              p[title*=abc]{} : 是p元素，且title元素含有abc，才会被选中 */
+
+/* 伪类选择器 ： div > p:first-child ，选择div中的第一个元素（不一定是p哦，只是选择第一个） */
+/*              div > p:last-child ，选择div中的最后一个元素 */
+/*              div > p:nth-child(在这里写第几个：第四个就写4) ，选择div中的第n个元素 */
+/*                                                                                */
+/*              div > p:first-of-type ，选择div中的第一个p） */ 
+/*              div > p:last-of-type，选择div中的最后一个p */
+/*              div > p:nth-of-type(在这里写第几个：第四个就写4) ，选择div中的第n个p */
+/*                                                                                */
+/*              div > p:not(:nth-of-type(4)) ， 除了div中的第4个p，div其余的p都被选择 */
+
+/* 超链接伪类选择器 ： a:link{} 选中没访问的链接 ；  a:visited{} 选中访问过的链接 ； a:hover{} 鼠标移过去 ； a:active{} 鼠标点击*/
+
+/* 伪元素选择器 ：  p：：first-letter{} p中的第一个字母； */
+/*                 p：：first-line{} p中的第一行  */
+/*                 p：：selection{} p中鼠标选中的内容  */
+/*                 div::before{content:abc} 在div开头插入abc */
+/*                 div::after{content:abc} 在div结尾插入abc */
+
+/* 优先级： 内联样式（1000） > id选择器（100） > 类和伪类选择器（10） > 元素选择器（1） > 通配（0） > 继承*/
+/*       相加计算出优先级 ；不能跨越数量级（多个id选择器加起来都不会超过内联）；同优先级，从上到下运行*/
+/*       自定义最高级： !important    */
+
+/* 单位：em的大小 = font-size(字体大小)   rem的大小=html中font-size的大小 */
+/* 若font-size=16px，则1em = 16px   */
+
+/* HSL值  色相（0--360）饱和度（0-100%） 亮度（0-100%） */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
