--- a/style.css
+++ b/style.css
@@ -1,20 +1,44 @@
 p{
-    color: blueviolet;
+    color: pink;
     font-size: 50px;
+    margin-left: 700px;
+}
+
+p.test{
+    color: pink;
+    margin-left: 300px;
 }
 
 h1{
-    color: brown;
+    color: pink;
     font-size: 100px;
+}
+
+h1.pink{
+    color: pink;
+    margin-left: 500px;
 }
 
 a{
     color: greenyellow;
     font-size: 25px;
+
+    margin-left: 700px;
 }
 
-#yellow{
-    color: yellow;
+a#a{
+    margin-left: 500px;
+}
+a#c{
+    margin-left: 500px;
+}
+
+video{
+    margin-left: 500px;
+}
+
+audio{
+    margin-left: 500px;
 }
 
 .blue{
@@ -25,14 +49,33 @@ a{
     font-size: 100px;
 }
 
-#box1{
+img{
+    margin-left: 300px;
+}
+
+iframe{
+    margin-left: 300px;
+}
+
+.box1{
     width: 200px;
     height: 200px;
     background-color: aqua;
 
-    border-color: blueviolet;
-    border-width: 10px;
+    border-color: blueviolet blue yellow green;
+    border-width: 15px;
     border-style: solid;
+
+    padding: 10px;
+
+    margin-left: 500px;
+
+}
+
+.inner{
+    width: 100%;
+    height: 100%;
+    background-color: pink;
 }
 
 
