--- a/style.css
+++ b/style.css
@@ -1,37 +1,44 @@
 p{
     color: pink;
     font-size: 50px;
-    margin-left: 700px;
+    
+    width: 250px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 p.test{
-    font-size: 25px;
+    width: 1200px;
+    font-size: 30px;
     color: black;
     margin-left: 300px;
+    
+
+   
 }
 
 h1{
     color: pink;
-    font-size: 100px;
+    font-size: 50px;
+    
+    width: 250px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1.pink{
+    font-size: 100px;
     color: pink;
-    margin-left: 500px;
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 a{
     color: greenyellow;
     font-size: 25px;
 
-    margin-left: 700px;
-}
-
-a#a{
-    margin-left: 500px;
-}
-a#c{
-    margin-left: 500px;
+    margin-left: 550px;
 }
 
 video{
@@ -39,43 +46,37 @@ video{
 }
 
 audio{
-    margin-left: 500px;
-}
-
-.blue{
-    color: blue;
-}
-
-.abc{
-    font-size: 100px;
+    margin-left: 500px;;
 }
 
 img{
-    margin-left: 300px;
+    margin-left: 500px;
 }
 
 iframe{
-    margin-left: 300px;
+    margin-left: 500px;
 }
 
 .box1{
-    width: 200px;
+    width: 800px;
     height: 200px;
-    background-color: aqua;
+   
 
     border-color: blueviolet blue yellow green;
-    border-width: 15px;
+    border-width: 10px;
     border-style: solid;
 
-    padding: 10px;
-
-    margin-left: 500px;
-
+    margin-left: auto;
+    margin-right: auto;   
 }
 
 .inner{
-    width: 100%;
-    height: 100%;
+    
+    height: 200px;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    
     background-color: pink;
 }
 
