--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 p{
     color: pink;
-    font-size: 50px;
-    
+    font-size: 50px;  
     width: 250px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 500px;
+
 }
 
 p.test{
@@ -12,15 +11,11 @@ p.test{
     font-size: 30px;
     color: black;
     margin-left: 300px;
-    
-
-   
 }
 
 h1{
     color: pink;
     font-size: 50px;
-    
     width: 250px;
     margin-left: auto;
     margin-right: auto;
@@ -37,8 +32,15 @@ h1.pink{
 a{
     color: greenyellow;
     font-size: 25px;
-
     margin-left: 550px;
+}
+
+a#top{
+color: aqua;
+}
+
+a#bottom{
+color: aqua;
 }
 
 video{
@@ -60,12 +62,9 @@ iframe{
 .box1{
     width: 800px;
     height: 200px;
-   
-
     border-color: blueviolet blue yellow green;
     border-width: 10px;
     border-style: solid;
-
     margin-left: auto;
     margin-right: auto;   
 }
@@ -76,7 +75,6 @@ iframe{
     width: 200px;
     margin-left: auto;
     margin-right: auto;
-    
     background-color: pink;
 }
 
