--- a/style.css
+++ b/style.css
@@ -71,11 +71,11 @@ iframe{
     border-style: solid;
     margin-left: auto;
     margin-right: auto;   
+    overflow: auto;
 }
 
 .inner{
-    
-    height: 200px;
+    height: 500px;
     width: 200px;
     margin-left: auto;
     margin-right: auto;
