--- a/style.css
+++ b/style.css
@@ -45,12 +45,20 @@ h1.pink{
 
 a{
     display: block;
-    width: 500px;
+    width: 230px;
     height: 50px;
     color: greenyellow;
     font-size: 25px;
     margin-left: 550px;
     background-color:rgb(82, 40, 64) ;
+}
+
+a:hover{
+    color: pink;
+}
+
+a:active{
+    color: rgb(102, 58, 66)
 }
 
 a#top{
@@ -59,6 +67,14 @@ color: aqua;
 
 a#bottom{
 color: aqua;
+}
+
+a#top:hover{
+    color: palevioletred;
+}
+    
+a#bottom{
+    color: palevioletred;
 }
 
 video{
