--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1.pink{
 
 h1.pink:hover{
     color: palevioletred;
-    box-shadow: 50px 50px rgba(0,0,3,.5);
+    box-shadow: 50px 50px 50px rgba(0,0,3,.5);
 }
 
 a{
@@ -111,6 +111,10 @@ iframe{
     margin-left: auto;
     margin-right: auto;   
     overflow: auto;
+}
+
+.box1:hover{
+    box-shadow: 50px 50px 50px rgba(0,0,3,.5);
 }
 
 .inner{
