--- a/style.css
+++ b/style.css
@@ -59,7 +59,10 @@ a{
     color: greenyellow;
     font-size: 25px;
     margin-left: 550px;
+    padding-left: 10px;
+    padding-right: 10px;
     background-color:rgb(82, 40, 64) ;
+    border-radius: 15px;
 }
 
 a:hover{
