--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ h1.pink:hover{
 a{
     width: 230px;
     height: 50px;
+    line-height: 50px;
     color: greenyellow;
     font-size: 25px;
     margin-left: 300px;
