--- a/style.css
+++ b/style.css
@@ -52,13 +52,21 @@ h1.pink:hover{
     box-shadow: 50px 50px 50px rgba(0,0,3,.5);
 }
 
+div.tt{
+    margin-left: auto;
+    margin-right:auto ;
+    width: 538px;
+}
+
 a{
-    width: 230px;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
     height: 50px;
     line-height: 50px;
     color: greenyellow;
     font-size: 25px;
-    margin-left: 300px;
+    margin-left: px;
     padding-left: 10px;
     padding-right: 10px;
     background-color:rgb(82, 40, 64) ;
