--- a/style.css
+++ b/style.css
@@ -7,6 +7,29 @@ html{
     background-color: rgb(173, 159, 171);
 }
 
+table{
+    border-spacing: 1px;
+	background-color: black;
+	margin: 80px auto 10px auto;
+}
+
+h2{
+    text-align: center;
+}
+
+th,td {
+	background-color: white;
+}
+
+#formDiv {
+	width: 250px;
+	border-style: solid;
+	border-width: 1px;
+	margin: 50px auto 10px auto;
+	padding: 10px;
+    background-color: white;
+}
+
 #img{
     width: 300px;
     margin: 20px auto;
@@ -19,15 +42,22 @@ p{
     color: pink;
     font-size: 50px;  
     width: 250px;
-    margin-left: 500px;
-
+    margin: 0px auto;
+    text-align: center;
 }
 
-p#pimg{
+
+#form{
+    text-align: center;
+    clear: both;
+}
+
+#pimg{
     margin: 10px auto;
     width: 1000px;
     font-size: 50px;
     text-align: center;
+    clear: both;
 }
 
 p:hover{
@@ -68,8 +98,7 @@ h1.pink:hover{
 }
 
 div.tt{
-    margin-left: auto;
-    margin-right:auto ;
+    margin:0px auto;
     width: 538px;
 }
 
@@ -87,7 +116,29 @@ div.t{
     width: 500px;
     }
 
-a{
+div#test1{
+    margin: 0 auto;
+    font-size: 20px;
+    text-align: center;
+    
+}
+
+div#test2{
+    margin: 50px auto;
+    font-size: 20px;
+    text-align: center;
+    
+}
+
+li{
+    background-color: aquamarine;
+    margin: 10px 200px 10px 200px;
+    
+    float: left;
+    list-style: none;
+}
+
+/* a{
     height: 50px;
     line-height: 50px;
     color: greenyellow;
@@ -97,18 +148,18 @@ a{
     background-color:rgb(82, 40, 64) ;
     border-radius: 15px;
     float: left;
-}
+} */
 
-a:hover{
+/* a:hover{
     color: pink;
 }
 
 a:active{
     color: rgb(102, 58, 66)
-}
+} */
 
 #top{
-color: aqua;
+    color: aqua;
 }
 
 
@@ -122,16 +173,22 @@ color: aqua;
 }
 
 video{
-    margin-left: 500px;
+    margin: 0px auto;
+    display: block;
+    clear: both;
 }
 
 audio{
-    margin-left: 500px;;
+    margin: 0px auto;
+    display: block;
+    clear: both;
 }
 
 
 iframe{
-    margin-left: 500px;
+    margin: 0px auto;
+    display: block;
+    clear: both;
 }
 
 .box1{
